--- a/Operacao_bancaria.ipynb
+++ b/Operacao_bancaria.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "id": "ff336f16",
    "metadata": {},
    "outputs": [
@@ -11,38 +11,46 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "    Menu Conta Corrente:\n",
-      "    [d] Depositar\n",
-      "    [s] Sacar\n",
-      "    [e] Extrato\n",
-      "    [q] Sair    \n",
+      "Menu Conta Corrente:\n",
+      "[d] Depositar\n",
+      "[s] Sacar\n",
+      "[e] Extrato\n",
+      "[q] Sair    \n",
       "\n",
       "Digite a operação escolhida: d\n",
-      "Insira o valor do depósito: 50\n",
+      "Insira o valor do depósito: 200\n",
       "\n",
       "\n",
       "Digite a operação escolhida: s\n",
-      "Insira o valor de saque: 2\n",
+      "Insira o valor de saque: 100\n",
+      "\n",
+      "\n",
+      "Digite a operação escolhida: d\n",
+      "Insira o valor do depósito: 156\n",
+      "\n",
+      "\n",
       "Digite a operação escolhida: e\n",
       "\n",
       "----Extrato Bancário----\n",
       "\n",
-      "Depósito: R$  50.0\n",
-      "Saque: - R$  2.0\n",
+      "Depósito: R$  200.0\n",
+      "Saque: -R$  100.0\n",
+      "Depósito: R$  156.0\n",
       "\n",
       "-------\n",
-      "Saldo: R$  48.0\n",
+      "Saldo: R$  256.0 \n",
+      "\n",
       "Digite a operação escolhida: q\n"
      ]
     }
    ],
    "source": [
     "print(\"\"\"\n",
-    "    Menu Conta Corrente:\n",
-    "    [d] Depositar\n",
-    "    [s] Sacar\n",
-    "    [e] Extrato\n",
-    "    [q] Sair    \n",
+    "Menu Conta Corrente:\n",
+    "[d] Depositar\n",
+    "[s] Sacar\n",
+    "[e] Extrato\n",
+    "[q] Sair    \n",
     "\"\"\")\n",
     "\n",
     "saldo = 0\n",
@@ -56,13 +64,12 @@
     "    \n",
     "    if opcao == 'd':\n",
     "        deposito = float(input(\"Insira o valor do depósito: \"))\n",
-    "        saldo = sum(extrato)\n",
-    "        \n",
+    "        saldo = sum(extrato) \n",
     "        if deposito <= 0:\n",
     "            print(\"Você digitou valores negativos ou nulo!\\n\")            \n",
     "        else:\n",
     "            extrato.append(deposito)  \n",
-    "        print('\\n')     \n",
+    "            print('\\n')     \n",
     "    elif opcao == 's':  \n",
     "        sacar = float(input(\"Insira o valor de saque: \"))\n",
     "        saldo = sum(extrato)\n",
@@ -75,7 +82,8 @@
     "            print(\"Você não tem limite para efetuar o saque\\n\")\n",
     "        else:           \n",
     "            numero_saques+=1\n",
-    "            extrato.append(sacar*-1)             \n",
+    "            extrato.append(sacar*-1) \n",
+    "            print('\\n')\n",
     "            \n",
     "    elif opcao == 'e':  \n",
     "        saldo = sum(extrato)\n",
@@ -84,8 +92,8 @@
     "            if i > 0:                \n",
     "                print('Depósito: R$ ', i)\n",
     "            else:\n",
-    "                print('Saque: - R$ ', float(i*-1))\n",
-    "        print('\\n-------\\nSaldo: R$ ',float(saldo))  \n",
+    "                print('Saque: -R$ ', float(i*-1))\n",
+    "        print('\\n-------\\nSaldo: R$ ',float(saldo),'\\n')  \n",
     "        \n",
     "    elif opcao == 'q':  \n",
     "        break\n",
